--- a/Irc4netButSmarter.csproj
+++ b/Irc4netButSmarter.csproj
@@ -6,5 +6,8 @@
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
     <FileVersion>1.0.0.0</FileVersion>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Threading" Version="16.6.13" />
+  </ItemGroup>
 
 </Project>
